2005-06-10  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Source/CO/biblstru.odd: simplify content model so that it has
	some chance of surviving odd2odd. I _think_ it has the same effect!

2005-06-09  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Source/CO/biblstru.odd: add extra group in content model, to
	generate valid DTD

	* Source/CO/respstmt.odd: comment out the <interleave> for now, as
	I cannot work out how to translate it.

2005-06-08  Sebastian Rahtz  <rahtz@spqr-ibm>

	* guidelines-print.xsl: fix bugs in customization of odd2html to
	do with heading numbering

2005-05-28  Lou Burnard 
	* Source/MS/*.odd Check in changes to MS chapter received from MJD
	after checking that they parse
	
2005-04-22  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Source/ST/st.odd: remove blank lines making it hard to read

2005-04-21  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Source/ST/clseg.odd: tei.seg does not need to be predeclared any more

	* Source/TD/vallist.odd: add valList to identifiable, so that it
	can have a "mode" attribute

	* Source/FD/if.odd: PIs no longer needed in content model,
	due to improvements on odd2dtd

	* Source/DS/titlepa.odd: PIs no longer needed in content model,
	due to improvements on odd2dtd; use <group> instead
	
	* Makefile: added database and web targets for dist and install;
	the XQuery scripts have now moved to this directory.

2005-04-09  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Source/ST/st.odd: remove ref to cbgeseq. does not seem to be
	used, and we cannot have identically-named macros.

	* segmix and segmixxx removed from SA and ST, as mix.seg is not
	used anywhere at all now

2005-03-29  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Makefile (install): add install target to Makefile, which copies
	files to $PREFIX. Use www.tei-c.org/stylesheet for source of XSL for all jobs

2005-03-20  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Makefile: use www.tei-c.org.uk eXist server

2005-03-15  louburnard  <louburnard@spqr-ibm>

	* Source/MS/datable.odd: